--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
+    // JSON DIFF
+    implementation 'org.json:json:20190722'
+
+
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.0.pr3'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.0.pr3'
