--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     // JSON DIFF
     implementation 'org.json:json:20190722'
     implementation 'com.jayway.jsonpath:json-path:2.4.0'
+    implementation 'org.skyscreamer:jsonassert:1.5.0'
 
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
