[ABM]-Removed JSON diff module and separated the reporting logic

--- a/src/main/resources/rest-integ.yml
+++ b/src/main/resources/rest-integ.yml
@@ -2,16 +2,16 @@ ServiceName: REST Integrator
 Version: 1.2.3
 BasePath: http://localhost:8080/home-automation/api
 APIS:
-#  - name: Get Bills
-#    path: /bills
-#    method: GET
-#    tests:
-#      - name: Should get all bills successfully
-#        request:
-#          responseIsList: true
-#        response:
-#          body: get-all-bills-response.json
-#          status: 200
+  - name: Get Bills
+    path: /bills
+    method: GET
+    tests:
+      - name: Should get all bills successfully
+        request:
+          responseIsList: true
+        response:
+          body: get-all-bills-response.json
+          status: 200
 
   - name: Summary API
     path: /bills/summary
