--- a/src/test/resources/rest-integ.yml
+++ b/src/test/resources/rest-integ.yml
@@ -1,6 +1,7 @@
 ServiceName: REST Integrator
 Version: 1.2.3
 BasePath: http://localhost:8080/home-automation/api
+
 APIS:
   - name: Find Bill By ID
     path: /bills/{id}
@@ -19,6 +20,7 @@ APIS:
             id: abc
         response:
           status: 404
+
   - name: Get Bills
     path: /bills
     method: GET
@@ -30,7 +32,7 @@ APIS:
           body: get-all-bills-response.json
           status: 200
 
-  - name: Summary API
+  - name: Get Bills Summary
     path: /bills/summary
     method: GET
     tests:
@@ -39,7 +41,7 @@ APIS:
           body: bill-summary-response.json
           status: 200
 
-  - name: Update API
+  - name: Update Bill
     path: /bills
     method: PUT
     tests:
@@ -48,6 +50,18 @@ APIS:
           body: update-bill-request.json
         response:
           status: 204
+
+  - name: Delete Bill by Id
+    path: /bills/{id}
+    method: DELETE
+    tests:
+      - name: Should delete a bill matching the bill Id
+        request:
+          pathParams:
+            id: 5cb0e8f06115cb35417ca6ed
+        response:
+          status: 200
+
 
 #  - name: Add Bill
 #    path: /bills
