[ABM]-Added Test Cases and some code restructuring done

--- a/build.gradle
+++ b/build.gradle
@@ -58,4 +58,6 @@ dependencies {
     // Use the awesome Spock testing and specification framework even with Java
     testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
     testImplementation 'cglib:cglib-nodep:3.3.0'
+    testImplementation 'org.objenesis:objenesis:3.1'
+
 }
