--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,10 @@ publishing {
     }
 }
 
+test {
+    useJUnitPlatform()
+}
+
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
@@ -59,5 +63,10 @@ dependencies {
     testImplementation 'org.spockframework:spock-core:1.2-groovy-2.5'
     testImplementation 'cglib:cglib-nodep:3.3.0'
     testImplementation 'org.objenesis:objenesis:3.1'
+
+    testCompile "com.github.tomakehurst:wiremock-jre8:2.26.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
 
 }
